design start assessment section

--- a/src/app/components/user/confirm-assessment/confirm-assessment.component.html
+++ b/src/app/components/user/confirm-assessment/confirm-assessment.component.html
@@ -14,6 +14,7 @@
       Close
     </button>
     <button
+      (click)="onStartAssessment()"
       class="py-1 bg-teal-600 text-white font-semibold rounded-md w-full text-sm"
     >
       Start assessment
