--- a/src/app/components/user/demo-assessment/demo-assessment.component.css
+++ b/src/app/components/user/demo-assessment/demo-assessment.component.css
@@ -1,29 +1,9 @@
-.demo {
-  width: 1200px;
+.question_view_dialog {
+  width: 600px;
 }
+
 .questions {
-  height: 500px;
+  height: 450px;
   overflow-x: hidden;
   overflow-y: scroll;
-}
-.progress_bar {
-  color: black !important;
-}
-
-/* Scroll Bar */
-
-::-webkit-scrollbar-track {
-  background-color: #f5f5f5;
-}
-
-::-webkit-scrollbar {
-  width: 8px;
-  background-color: #f5f5f5;
-}
-
-::-webkit-scrollbar-thumb {
-  background-color: rgba(133, 46, 46, 0.2);
-  border: 0px;
-  background-clip: padding-box;
-  border-radius: 5px;
 }
