--- a/src/app/components/user/user-assessment/user-assessment.component.html
+++ b/src/app/components/user/user-assessment/user-assessment.component.html
@@ -58,6 +58,24 @@
               <div class="">user taken</div>
             </div>
           </div>
+          <!-- required skills are  -->
+          <div class="flex flex-row flex-wrap gap-2 mt-4">
+            <div
+              class="bg-gray-500 px-3 py-1 rounded-md text-white text-xs font-semibold font-merriweather"
+            >
+              Database
+            </div>
+            <div
+              class="bg-gray-500 px-3 py-1 rounded-md text-white text-xs font-semibold font-merriweather"
+            >
+              OOP
+            </div>
+            <div
+              class="bg-gray-500 px-3 py-1 rounded-md text-white text-xs font-semibold font-merriweather"
+            >
+              React.js
+            </div>
+          </div>
         </a>
       </div>
     </div>
